--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
-    "socket.io": "^4.8.0"
+    "razorpay": "^2.9.5",
+    "socket.io": "^4.8.0",
+    "stripe": "^17.3.0"
   }
 }
